Add middleware layer for getAllNfts
