# harvest-flow/api/src/tsoa/routes.ts
@@ -79,7 +79,7 @@ const models: TsoaRoute.Models = {
         "additionalProperties": false,
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "GetAllNftContractsResponse": {
+    "NftContract": {
         "dataType": "refObject",
         "properties": {
             "name": {"dataType":"string","required":true},
