# harvest-flow/utils/src/types.ts
@@ -1,0 +1,13 @@
+
+export interface NftContract {
+    name: string; // erc721
+    symbol:  string; // erc721
+
+    chainId: string; // caip-2 format
+
+    leaseStart: number;
+    leaseEnd: number;
+}
+
+
+
